<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D5284"
    tools:context=".ProfilePageMain">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_photo_container"
        android:layout_width="135dp"
        android:layout_height="138dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:elevation="10dp"
        app:cardBackgroundColor="#DEE0FF"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:contentDescription="@string/users_profile_picture"
            app:srcCompat="@drawable/ic_baseline_account_circle"
            app:tint="@color/button_purple" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/name_input_container"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:elevation="10dp"
        app:cardBackgroundColor="#DEE0FF"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/nameOfUser"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/nameOfUser"
            android:textColor="#616161"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bio_input_container"
        android:layout_width="210dp"
        android:layout_height="170dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:elevation="10dp"
        app:cardBackgroundColor="#DEE0FF"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/name_input_container"
        app:layout_constraintTop_toBottomOf="@+id/name_input_container">

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/bio"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColorHint="#616161"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="-30dp"
            tools:layout_editor_absoluteY="-45dp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/button_purple"
        android:text="@string/user_stats"
        android:textSize="12sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/profile_photo_container"
        app:layout_constraintStart_toStartOf="@+id/profile_photo_container"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo_container" />

    <Button
        android:id="@+id/button2"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/button_purple"
        android:backgroundTintMode="src_in"
        android:text="@string/user_details"
        android:textSize="12sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <androidx.cardview.widget.CardView
        android:id="@+id/trophy_case"
        android:layout_width="360dp"
        android:layout_height="140dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="#DEE0FF"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2">

        <TextView
            android:id="@+id/trophy_case_title"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:background="@color/button_purple"
            android:text="@string/trophy_case"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/social_case"
        android:layout_width="360dp"
        android:layout_height="140dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="#DEE0FF"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trophy_case">

        <TextView
            android:id="@+id/social_case_title"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:background="@color/button_purple"
            android:text="@string/social_media"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
