<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D5284">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_photo_container"
        android:layout_width="134dp"
        android:layout_height="138dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        app:cardBackgroundColor="#DEE0FF"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_photo_of_user"
            app:srcCompat="@drawable/universal__37_" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/name_input_container"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:elevation="10dp"
        app:cardBackgroundColor="#DEE0FF"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_photo_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/nameofuser"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/nameOfUser" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bio_input_container"
        android:layout_width="220dp"
        android:layout_height="127dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:elevation="10dp"
        app:cardBackgroundColor="#DEE0FF"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_photo_container"
        app:layout_constraintTop_toBottomOf="@+id/name_input_container"
        app:layout_constraintVertical_bias="0.177">

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/bio"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColorHint="#000000"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="-30dp"
            tools:layout_editor_absoluteY="-45dp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/button_purple"
        android:text="@string/user_stats"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo_container" />

    <Button
        android:id="@+id/button2"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/button_purple"
        android:backgroundTintMode="src_in"
        android:text="@string/user_details"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/bio_input_container" />

    <androidx.cardview.widget.CardView
        android:layout_width="381dp"
        android:layout_height="108dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="#DEE0FF"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.006">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:background="@color/button_purple"
            android:text="@string/trophy_case"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>