<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/performance"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundHome"
    android:clickable="true"
    tools:context=".MeditationMentalPage">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeaderHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mental_page_header_background"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutHeaderHome"
            tools:layout_editor_absoluteX="10dp">

        </ScrollView>

        <TextView
            android:id="@+id/appTitleHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/meditations"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:onClick="meditationBackBtn"
            android:src="@drawable/ic_baseline_arrow_back"
            app:layout_constraintBottom_toBottomOf="@id/backBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/backBtn"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/meditationHomeBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/app_name"
            android:onClick="meditationHomeBtn"
            android:src="@drawable/ic_baseline_home"
            app:layout_constraintBottom_toBottomOf="@id/meditationHomeBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/meditationHomeBtn"
            app:tint="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/dailyMed"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/colorMeditationButtons"
        android:text="@string/daily_meditation"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorOffWhite"
        android:textSize="19sp"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/openHeart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeaderHome" />

    <Button
        android:id="@+id/openHeart"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#FCBD4684"
        android:text="@string/open_heart_meditation"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorOffWhite"
        android:textSize="19sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/letGo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyMed" />

    <Button
        android:id="@+id/letGo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/colorMeditationButtons"
        android:text="@string/let_go"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorOffWhite"
        android:textSize="19sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/letGo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openHeart" />

    <Button
        android:id="@+id/letGo2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="@color/colorMeditationButtons"
        android:text="@string/super_performance"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorOffWhite"
        android:textSize="19sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/letGo" />


</androidx.constraintlayout.widget.ConstraintLayout>

